package UE00_WHP;

/**
 * LED
 * @author Karanbir Guron 5AX
 */
public class LED extends Components {


}
